--- a/developer/wp-content/themes/multisite_platform/src/scss/partials/default.scss
+++ b/developer/wp-content/themes/multisite_platform/src/scss/partials/default.scss
@@ -3,7 +3,7 @@
 :root {    
     --white: #fff;
     --black: #000;
-    --primary-color: #1c1c;    
+    --primary-color: #9c1c1c;    
 }
 
 * {
@@ -64,4 +64,19 @@ img {
 
 .hidden {
     display: none;
+}
+
+.page-numbers {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    li {
+        display: inline-block;
+        span.current {
+            color: var(--primary-color);
+        }
+    }    
 }
