--- a/developer/wp-content/themes/multisite_platform/src/scss/single-listings.scss
+++ b/developer/wp-content/themes/multisite_platform/src/scss/single-listings.scss
@@ -1,3 +1,29 @@
+// Version 1.0.0
+
+.breadcrumbs {
+    margin-bottom: 2rem;
+    background-color: #f5f5f5;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+.breadcrumbs ul {
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+}
+.breadcrumbs li {
+    display: inline-block;
+}
+
+.breadcrumbs li a {
+    color: #000;
+    text-decoration: none;
+}
+
+.breadcrumbs li a:hover {
+    text-decoration: underline;
+}
+
 .container-listings {
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
